--- a/OrderApp/OrderApp.csproj
+++ b/OrderApp/OrderApp.csproj
@@ -1,10 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Endpoints\Em\**" />
+    <Content Remove="Endpoints\Em\**" />
+    <EmbeddedResource Remove="Endpoints\Em\**" />
+    <None Remove="Endpoints\Em\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="2.5.0" />
