--- a/OrderApp/OrderApp.csproj
+++ b/OrderApp/OrderApp.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Dapper" Version="2.1.28" />
     <PackageReference Include="DotNetEnv" Version="2.5.0" />
     <PackageReference Include="Flunt" Version="2.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.25" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.25">
